--- a/main.tex
+++ b/main.tex
@@ -57,11 +57,11 @@ Keywords: domain specific language, functional testing, automobile systems.
 %для бакалаврских, дипломных и магистерских работ
 \Chapter{Список обозначений}
 \begin{tabular}{ll}
-UML& унифицированный язык моделирования\\
+UML& Унифицированный язык моделирования\\
 ECU&Electronic Control Unit\\
-BDD& behaviour-driven development\\
-ПО & программное обеспечение\\
-TTD&test-driven development\\
+BDD& Behaviour-driven development\\
+ПО & Программное обеспечение\\
+TTD&Test-driven development\\
 DSL& Domain-specific language\\
 AUTOSAR&Automotive Open System Architecture\\
 БНФ&Форма Бэкуса-Наура\\
@@ -75,31 +75,30 @@ AST& Abstract syntax tree
 
 Современные автомобили имеют несколько блоков управления (electronic control unit, ECU), связанных между собой внутримашинной сетью. Эти блоки взаимодейсвуют между собой через стандартные шинные архитектуры CAN, FlexRay, LIN и Ethernet. С развитием техники количество ECU в автомобильных системах стремительно растет, что приводит к созданию сложных стуктур сетей. К основным особенностям автомобильного программного обеспечения можно отнести:
 \begin{itemize}
-\item	надежность: автомобильные программные системы должны работать исключительно надежно в сложной сети ECU в течение всего срока эксплуатации автомобиля;
-\itemфункциональная безопасность: такие функции, как антиблокировочная тормозная система и ESC, требуют безотказной работы, что определяет высокие требования к процессам разработки программного обеспечения и к самим программам;
+\item	надежность: в сложной сети ECU в течение всего срока эксплуатации автомобиля автомобильные программные системы должны работать исключительно надежно;
+\itemфункциональная безопасность: такие функции, как антиблокировочная тормозная система, требуют безотказной работы, что определяет высокие требования к процессам разработки программного обеспечения и к самим программам;
 \itemработа в режиме реального времени: быстрая реакция (от микросекунд до миллисекунд) на внешние события требует оптимизированных операционных систем и особой программной архитектуры;
 \itemминимальное потребление ресурсов: любое дополнение вычислительных ресурсов или памяти увеличивает стоимость продуктов, что при миллионных тиражах выливается в немалые деньги;
 \itemнадежная архитектура: автомобильное программное обеспечение должно выдерживать искажение сигналов и поддерживать электромагнитную совместимость;
-\itemэлектронно-механическое управление замкнутого цикла.
 \end{itemize}
 Функциональные проверки безопасности автомобильных систем на программном уровне включают: 
 \begin{itemize}
-\itemФункциональное тестирование, с целью гарантировать, что программное обеспечение удовлетворяет требованиям высокого и низкого уровней.
-\itemАнализ времени выполнения худшего сценария, для того чтобы гарантировать, что критические функции ПО выполняются достаточно быстро (такие как срабатывание подушек безопасности).
+\itemФункциональное тестирование, целью которого является предоставление гарантий, что ПО удовлетворяет требованиям высокого и низкого уровней.
+\itemАнализ времени выполнения худшего сценария, для того, чтобы гарантировать, что критические функции ПО выполняются достаточно быстро (такие как срабатывание подушек безопасности).
 \itemСтруктурный анализ покрытия.
 \end{itemize}
 
 
-Для качественного тестирования автомобильных систем необходимо хорошо понимать, как устроен автомобиль в целом и его составляющие по отдельности. Однако, преставления о системе у инженеров и менеджеров зачастую очень сильно расходятся. Взаимодействие тестировщика, заказчика, менеджера, бизнес-аналитика и разработчика является неотъемлемой частью гибкой методологии разработки (Agile software development). 
-В данной работе рассматривается разработка языка для функционального тестирования ПО автомобильных систем таким образом, чтобы тестовая документация была понятна всем участникам бизнес процесса. 
-Для достижения взаимопонимания между всеми участниками процесса была создана практика «разработка, основанная на функционировании» (behaviour-driven development – BDD). 
-В сфере автомобильных систем BDD подход мог бы сильно облегчить процесс разработки. 
+Что касается тестирования автомобильных систем, необходимо хорошо понимать, как устроен автомобиль в целом и его составляющие по отдельности. Однако представления о системе у инженеров и менеджеров зачастую очень сильно расходятся. Взаимодействие участников бизнес процессса, а именно заказчика, бизнес-аналитика, менеджера, разработчика и тестировщика является неотъемлемой частью гибкой методологии разработки ПО (Agile software development). 
+
+В данной работе рассматривается разработка языка для функционального тестирования ПО автомобильных систем таким образом, чтобы тестовая документация была понятна всем участникам бизнес цикла. 
+Практика «разработка через поведение» (behaviour-driven development, BDD) была создана для достижения взаимопонимания между всеми участниками процесса. В сфере автомобильных систем BDD подход сильно облегчать процесс разработки. 
 
 %TODO: обзор глав
 
-Работа организована следующим образом. В главе \ref{cReview} представлен 
+Данная работа организована следующим образом. В главе \ref{cReview} представлен 
 обзор проблемы создания языка для описания тестовых сценариев тестирования автомобильных систем и обзор аналогов. Глава \ref{cDesign} содержит 
-описание предлагаемого подхода к его построению. Вопросы его практической 
+описание предлагаемого подхода к непосредственному построению языка. Вопросы его практической 
 реализации рассмотрены в главе \ref{cImplementation}. Результаты 
 экспериментального исследования его эффекивности приведены в главе 
 \ref{cExperiments}. 
@@ -112,7 +111,7 @@ AST& Abstract syntax tree
 %двигателя''.
 
 %---------------------------ГЛАВА 1.1 ЦЕЛЬ И ЗАДАЧИ
-\section{ Цель и задачи} Целью выпускной квалификационной работы является разработка domain specific языка для функционального тестирования автомобильных систем, который облегчит взаимодействие между тестировщиком, заказчиком, менеджером, аналитиками, разработчиками и предоставит функционал, необходимый для симуляции работы автомобильных сетей. Такой язык позволит достичь большего взаимопонимания между менеджерами, аналитиками и инженерами, что в свою очередь значительно упростит разработку ПО и повысит качество разрабатываемого продукта. 
+\section{Цель и задачи} Целью выпускной квалификационной работы является разработка проблемно-ориентированного языка для функционального тестирования автомобильных систем, который облегчит взаимодействие между тестировщиком, заказчиком, менеджером, аналитиками, разработчиками и предоставит функционал, необходимый для симуляции работы автомобильных сетей. Такой язык позволит достичь большего взаимопонимания между менеджерами, аналитиками и инженерами, что в свою очередь значительно упростит разработку ПО и повысит качество разрабатываемого продукта. 
 Для достижения поставленной цели следует выполнить ряд задач:
 \begin{itemize}
 \itemИсследовать предметную область
@@ -125,9 +124,11 @@ AST& Abstract syntax tree
 
 %---------------------------ГЛАВА 1.2.	Обзор литературы
 \section{ Обзор литературы}
-Одно и то же оборудование, разрабатываемое для разных автомобильных компаний с различной внутренней архитертурой программного обеспечения при тестироввании ПО может рассматриваться в качестве «черного ящика». В этом случае тестируется функциональное поведение объекта. Под этой стратегией понимается создание тестов для тестового набора, основанных на технических требованиях и их спецификациях. 
+Одно и то же оборудование, разрабатываемое для разных автомобильных компаний с различной внутренней архитертурой программного обеспечения при тестироввании ПО может рассматриваться в качестве «черного ящика». Под черным ящиком подразумевается объект исследования, внутреннее устройство которого неизвестно. Данное понятие было предложено У.Р. Эшби. В электро-вычислительных системах оно помогает изучать поведение систем, абстрагируясь от их внутреннего устройства. Такое тестирование называется поведенческим. В этом случае тестируется функциональное поведение объекта с точки зрения внешнего мира. Под этой стратегией понимается создание тестов для тестового набора, основанных на технических требованиях и их спецификациях. 
 
-В марте 2006 года Dan North предложил BDD методологию (behaviour-driven development), основанную на agile методологиях. BDD является своего рода расширением техники разработки программного обеспечения через тестирование (test-driven development, TTD). Идея BDD подхода была в том, что в процессе написания требования для разрабатываемого ПО аналитики должны описать тестовые сценарии таким образом, чтобы их смог понять и разработчик, и тестировщик. При этом тестовые сценарии состоят из набора заранее обговоренных предложений. 
+Принимая автомобильную систему в качестве черного ящика ее можно исследовать, манипулируя входными данными и данными, полученными на выходе. В этом случае под данными понимаются пакеты автомобильной сети, передающиеся на сетевом уровне модели OSI. 
+
+В марте 2006 года Dan North предложил BDD методологию (behaviour-driven development), основанную на agile  методологиях. BDD является своего рода расширением техники разработки программного обеспечения через тестирование (test-driven development, TDD). Идея BDD подхода была в том, что в процессе написания требования для разрабатываемого ПО аналитики должны описать тестовые сценарии таким образом, чтобы их смог понять и разработчик, и тестировщик, и заказчик. При этом тестовые сценарии состоят из набора заранее обговоренных предложений. 
 В своей статье Dan North описал следующие BDD идеи:
 
 \begin{itemize}
@@ -242,7 +243,7 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
 Из вышеперечисленных инструментов для тестирования ПО видно, что ни один из них не удовлетворяет требованиям. Таким образом существует необходимость в создании domain specific языка для функционального тестирования, который объединит в себе принципы BDD и функционал, необходимый для симуляции работы автомобильных сетей CAN, LIN, Ethernet. Наличие такого языка значительно упростит разработку ПО и повысит качество разрабатываемого продукта. 
 
 %------------------------Уточненные требования к работе  TODO
-\section{    Уточненные требования к работе }
+\section{Уточненные требования к работе }
 Окончательная постановка задачи с явным отсечением лишнего 
 (чужого, нереализуемого и т.д.)
 
@@ -261,7 +262,7 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
 Разрабатываемый язык описания сценариев тестирования автомобильных систем должен быть проблемно-ориентированным, при этом прост в использовании и изучении, а так же предоставлять возможность разрабатывать сценарии не только инженерами, но и бизнес-аналитиками. 
 
 
-\section{    Описание синтаксиса языка }
+\section{Описание синтаксиса языка }
 Существуют три основных метода описания синтаксиса языков программирования: формальные грамматики, формы Бэкуса-Наура и диаграммы Вирта.
 
 Формальной грамматикой называется четверка вида:  G = (VT, VN, P, S), 
@@ -409,7 +410,7 @@ S – начальный символ грамматики.
 ANTLR4 удобен для работы с AST, является свободным программным обеспечением, предоставляет сообщение об ошибках и восставновление после них, а так же предоставляет плагины для Eclipse и IntelliJ IDEA, что позволяет удобно создавать и отлаживать грамматики. Интерпретатор реализован на языке java.
 
 %-------------------------------------ЛЕКСЕР
-\section{ Лексер}
+\section{Лексер}
 DSL для описания тестовых сценариев автомобильных систем должен иметь следующие характерные инструкции (предложения):
 \begin{itemize}
 \itemОтправить фрейм, сигнал или набор данных по UDS протоколу на тестируемое ПО
@@ -591,7 +592,7 @@ Java Native Interface (JNI) — стандартный механизм для запуска кода, под управле
 
 
 
-\section{Тестирование и испытание метода или программы}
+%\section{Тестирование}
 %Проверка адекватности модели, сравнение с существующими аналогами, выбор 
 %представительного множества тестов, анализ результатов испытаний.
 
