--- a/main.tex
+++ b/main.tex
@@ -124,9 +124,9 @@ AST& Abstract syntax tree
 
 %---------------------------ГЛАВА 1.2.	Обзор литературы
 \section{ Обзор литературы}
-Одно и то же оборудование, разрабатываемое для разных автомобильных компаний с различной внутренней архитертурой программного обеспечения при тестироввании ПО может рассматриваться в качестве «черного ящика». Под черным ящиком подразумевается объект исследования, внутреннее устройство которого неизвестно. Данное понятие было предложено У.Р. Эшби. В электро-вычислительных системах оно помогает изучать поведение систем, абстрагируясь от их внутреннего устройства. Такое тестирование называется поведенческим. В этом случае тестируется функциональное поведение объекта с точки зрения внешнего мира. Под этой стратегией понимается создание тестов для тестового набора, основанных на технических требованиях и их спецификациях. 
+Одно и то же оборудование, разрабатываемое для разных автомобильных компаний с различной внутренней архитертурой программного обеспечения при тестироввании ПО может рассматриваться в качестве «черного ящика». Данное понятие предложил У.Р. Эшби в своей книге `` Введение в кибернетику''. Под черным ящиком подразумевается объект исследования, внутреннее устройство которого неизвестно. В электро-вычислительных системах оно помогает изучать поведение систем, абстрагируясь от их внутреннего устройства. Такое тестирование называется поведенческим. В этом случае проверяется функциональное поведение объекта с точки зрения внешнего мира. Под этой стратегией понимается создание тестов для тестового набора, основанных на технических требованиях и их спецификациях. Фактически, при поведенческом тестировании известно какой результат должен быть при определенном наборе данных, которые подаются на вход. Проанализировав требования и спецификации тестировщик может легко определить набор тестовых сценариев для проверки различной функциональности тестируемой системы. Принимая тестируемую систему в качестве черного ящика ее можно исследовать, манипулируя входными данными и данными, полученными на выходе.  
 
-Принимая автомобильную систему в качестве черного ящика ее можно исследовать, манипулируя входными данными и данными, полученными на выходе. В этом случае под данными понимаются пакеты автомобильной сети, передающиеся на сетевом уровне модели OSI. 
+ 
 
 В марте 2006 года Dan North предложил BDD методологию (behaviour-driven development), основанную на agile  методологиях. BDD является своего рода расширением техники разработки программного обеспечения через тестирование (test-driven development, TDD). Идея BDD подхода была в том, что в процессе написания требования для разрабатываемого ПО аналитики должны описать тестовые сценарии таким образом, чтобы их смог понять и разработчик, и тестировщик, и заказчик. При этом тестовые сценарии состоят из набора заранее обговоренных предложений. 
 В своей статье Dan North описал следующие BDD идеи:
@@ -261,7 +261,34 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
 
 Разрабатываемый язык описания сценариев тестирования автомобильных систем должен быть проблемно-ориентированным, при этом прост в использовании и изучении, а так же предоставлять возможность разрабатывать сценарии не только инженерами, но и бизнес-аналитиками. 
 
+%-----------------------------ТЕСТИРОВАНИЕ АВТОМОБИЛЬНЫХ СИСТЕМ
+\section{Общие понятия автомобильных систем}
+С очень быстрым внедрением электронных встроенных систем в транспортных средствах потребность отследить и управлять различными параметрами транспортного средства стала необходимостью. Таким образом были разработаны диагностические системы, чтобы клиенты (проектировщики, тестировщики и механики) могли обнаружить ошибки в транспортном средстве, с помощью соединения их диагностического оборудования c электронным блоком управления в транспортном средстве. Компьютерная диагностика автомобиля  -- это диагностика различных систем автомобиля, производящаяся его блоком управления. Бортовые системы современного автомобиля оборудованы электронным блоком управления с функцией самодиагностики, анализирующим основные системы автомобиля и оповещающим водителя об их неисправности. Одной из областей в автомобильном тестировании является диагностика транспортных стредств, описанная в серии стандартов UDS ISO 14229.
+Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диагностическим системам общаться с ECU, чтобы диагностировать ошибки и при необходимости повторно программировать ECU. 
+ 
+\subsection{Протоколы бортовой диагностики}
+Современный автомобиль обладает огромным количеством компьютеров, которые общаются между собой на разных скоростях и типах коммуникаций, так как призваны выполнять разные задачи. 
+Принимая автомобильные системы в качестве черного ящика их можно исследовать, манипулируя входными данными и данными, полученными на выходе. В этом случае под данными понимаются пакеты автомобильной сети, передающиеся на сетевом уровне модели OSI через стандартные шинные архитектуры CAN, FlexRay, LIN и Ethernet. 
 
+Поведенческое тестирование автомобильных систем может быть выполнено следующими способами:
+\begin{itemize}
+\itemРазделение на классы эквивалентности 
+\\Часто легко заметить, что входные данные имеют схожие характеристики. В этом случае  их можно сгруппировать и подавать на вход только одну единицу данных из каждой группы.  Идея заключается в разделении входных данных на классы эквивалентности таким образом, что каждый член класса обладает схожими характеристиками.  
+\\Данный способ включается в себя два шага: определение класса эквивалентности и генерацию тестовых сценариев. Под определением класса эквивалентности подразумевается разделение входных данных на два класса: корректные и некорректные данные. Например, если действительный диапазон данных от 0 до 100, то в качестве корректных данных могжет быть выбирано значение 49, а в качестве некорректного 106. 
+
+\itemАнализ граничных значений
+\\Тестирование граничные значения данных позволяют достаточно хорошо проверить качество программного обеспечения. Следовательно, если тестовые сценарии разработаны для граничных значений входной области, то эффективность тестирования повышается. Например, если действительный диапазон данных от 0 до 100, то в качестве корректных данных выбираются граничные значения 0 и 100 для кореектных данных, а в качестве некорректных -1 и 101.
+
+\itemТестирование, основанное на требованиях
+\\Данный способ тестирования подразумевает валидацию требований, предоставленных аналитиками и инженерами, которые составляют требования. Например, если в требовании описано, что сеть должна переходить в активный режим при получении любого кадра, то в качестве входных данных формируется любой корректный в данной сети кадр.
+\end{itemize}
+
+Прежде чем начать разрабатывать язык для описания сценариев тестирования автомобильных систем рассмотрим основные стандарты, используемые в автомобильной промышленности. 
+
+\subsection{Unified Diagnostic Services}
+Unified Diagnostic Services, UDS - это диагностиеский протокол связи 
+
+%-------------------------------СИНТАКСИС ЯЗЫКА
 \section{Описание синтаксиса языка }
 Существуют три основных метода описания синтаксиса языков программирования: формальные грамматики, формы Бэкуса-Наура и диаграммы Вирта.
 
