--- a/main.tex
+++ b/main.tex
@@ -123,7 +123,7 @@ AST& Abstract syntax tree
 
 
 %---------------------------ГЛАВА 1.2.	Обзор литературы
-\section{ Обзор литературы}
+\section{Обзор литературы}
 Одно и то же оборудование, разрабатываемое для разных автомобильных компаний с различной внутренней архитертурой программного обеспечения при тестироввании ПО может рассматриваться в качестве «черного ящика». Данное понятие предложил У.Р. Эшби в своей книге `` Введение в кибернетику''. Под черным ящиком подразумевается объект исследования, внутреннее устройство которого неизвестно. В электро-вычислительных системах оно помогает изучать поведение систем, абстрагируясь от их внутреннего устройства. Такое тестирование называется поведенческим. В этом случае проверяется функциональное поведение объекта с точки зрения внешнего мира. Под этой стратегией понимается создание тестов для тестового набора, основанных на технических требованиях и их спецификациях. Фактически, при поведенческом тестировании известно какой результат должен быть при определенном наборе данных, которые подаются на вход. Проанализировав требования и спецификации тестировщик может легко определить набор тестовых сценариев для проверки различной функциональности тестируемой системы. Принимая тестируемую систему в качестве черного ящика ее можно исследовать, манипулируя входными данными и данными, полученными на выходе.  
 
  
@@ -262,13 +262,27 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
 Разрабатываемый язык описания сценариев тестирования автомобильных систем должен быть проблемно-ориентированным, при этом прост в использовании и изучении, а так же предоставлять возможность разрабатывать сценарии не только инженерами, но и бизнес-аналитиками. 
 
 %-----------------------------ТЕСТИРОВАНИЕ АВТОМОБИЛЬНЫХ СИСТЕМ
-\section{Общие понятия автомобильных систем}
-С очень быстрым внедрением электронных встроенных систем в транспортных средствах потребность отследить и управлять различными параметрами транспортного средства стала необходимостью. Таким образом были разработаны диагностические системы, чтобы клиенты (проектировщики, тестировщики и механики) могли обнаружить ошибки в транспортном средстве, с помощью соединения их диагностического оборудования c электронным блоком управления в транспортном средстве. Компьютерная диагностика автомобиля  -- это диагностика различных систем автомобиля, производящаяся его блоком управления. Бортовые системы современного автомобиля оборудованы электронным блоком управления с функцией самодиагностики, анализирующим основные системы автомобиля и оповещающим водителя об их неисправности. Одной из областей в автомобильном тестировании является диагностика транспортных стредств, описанная в серии стандартов UDS ISO 14229.
-Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диагностическим системам общаться с ECU, чтобы диагностировать ошибки и при необходимости повторно программировать ECU. 
+\section{Тестирование автомобильных систем}
+
+Прежде чем начать разрабатывать язык для описания сценариев тестирования автомобильных систем рассмотрим основные стандарты, используемые в транспортной промышленности. 
+
+Современный автомобиль обладает огромным количеством компьютеров, которые общаются между собой на разных скоростях и типах коммуникаций, так как призваны выполнять разные задачи. С очень быстрым внедрением электронных встроенных систем в транспортных средствах потребность отследить и управлять различными параметрами транспортного средства стала необходимостью. Таким образом были разработаны диагностические системы, чтобы клиенты (проектировщики, тестировщики и механики) могли обнаружить ошибки в транспортном средстве, с помощью соединения их диагностического оборудования c электронным блоком управления в транспортном средстве. Компьютерная диагностика автомобиля  -- это диагностика различных систем автомобиля, производящаяся его блоком управления. Бортовые системы современного автомобиля оборудованы электронным блоком управления с функцией самодиагностики, анализирующим основные системы автомобиля и оповещающим водителя об их неисправности. 
+Для компьютерной диагностики электронный блок управления на физческом уровне подключается к стенду через специализированные диагностические интерфейсы, оснащенному датчиками, посредством которых данные о работе систем передаются для дальнейшего анализа на компьютер. На этом этапе удалятся собранная бортовой системой база данных, а также активируется управляющее устройство для сбора информации. 
+
+Одной из областей в автомобильном тестировании является диагностика транспортных стредств, описанная в серии стандартов UDS ISO 14229.
+Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диагностическим системам общаться с ECU, чтобы диагностировать ошибки и при необходимости повторно программировать ECU. Потребность в стандарте возникла так как производители транстпортных средств собирают автомобильные компоненты у разных поставщиков. До возникновения UDS ISO 14229 поставщики должны были заниматься проблемами совместимости между различными диагностическими протоколами, сейчас же все ECU разрабатываются, придерживаясь данного стандарта. 
+ Архитектура UDS протокола разработана, основываясь на сетевой модели OSI (Open System Interconnection) и определяет пятый (сетевой уровень) и седьмой (прикладной уровень) модели. 
+Стек протокола UDS предлагает четыре важных категории сервисов:
+ \begin{itemize}
+ \itemЗагрузка данных в ECU для разрешения программных ошибок или добавления вновь разработанных программных модулей;
+ \itemУдаленная активация рутин. Диагностика транспортного средства может потребовать тестирования некорректного компонента в определенном  диапазоне значений.  Более того во время тестирования некоторые некоторые шаги могут выполняться в течении определенного времени. Для такого рода активностей используется Remote Routine Service, описанный в ISO 14229. 
+ \itemВозможность передачи данных позволяет клиентам читать или записывать данные в ECU. Данные могут быть считанны или записаны в ячейки памяти, имеющие 16-битный адресс. Информация может быть статичной, как серийный номер устройства, и динамической, как скорость мотора или статус сенсоров. Допустимые значения данных и их длина могут варьироваться в зависимости от адреса ячейки памяти.
+ \itemДиагностика ошибок. Это один из самых важных сервисов UDS протокола. Когда в ECU возникает ошибка, DTC (Diagnostic trouble code), соответствующий возникшей ошибке  сохраняется в определенной области памяти, называемой FCM (Faut Code Memory). Каждая ошибка имеет одно или несколько условий возникновения, обычно описываемые в требованиях.
+ \end{itemize}
  
-\subsection{Протоколы бортовой диагностики}
-Современный автомобиль обладает огромным количеством компьютеров, которые общаются между собой на разных скоростях и типах коммуникаций, так как призваны выполнять разные задачи. 
-Принимая автомобильные системы в качестве черного ящика их можно исследовать, манипулируя входными данными и данными, полученными на выходе. В этом случае под данными понимаются пакеты автомобильной сети, передающиеся на сетевом уровне модели OSI через стандартные шинные архитектуры CAN, FlexRay, LIN и Ethernet. 
+Тестирование автомобильных систем предполагает, что поведение электрических блоков управления транспортного средства должно соответствовать стандарту UDS ISO 14229.
+ 
+Принимая АС в качестве черного ящика их можно исследовать, манипулируя входными данными и данными, полученными на выходе. В этом случае под данными понимаются пакеты автомобильной сети, передающиеся на сетевом уровне модели OSI через стандартные шинные архитектуры CAN, FlexRay, LIN и Ethernet. 
 
 Поведенческое тестирование автомобильных систем может быть выполнено следующими способами:
 \begin{itemize}
@@ -283,10 +297,7 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 \\Данный способ тестирования подразумевает валидацию требований, предоставленных аналитиками и инженерами, которые составляют требования. Например, если в требовании описано, что сеть должна переходить в активный режим при получении любого кадра, то в качестве входных данных формируется любой корректный в данной сети кадр.
 \end{itemize}
 
-Прежде чем начать разрабатывать язык для описания сценариев тестирования автомобильных систем рассмотрим основные стандарты, используемые в автомобильной промышленности. 
 
-\subsection{Unified Diagnostic Services}
-Unified Diagnostic Services, UDS - это диагностиеский протокол связи 
 
 %-------------------------------СИНТАКСИС ЯЗЫКА
 \section{Описание синтаксиса языка }
