--- a/main.tex
+++ b/main.tex
@@ -17,18 +17,20 @@
 
 
 
-\Abstract{Выпускная квалификационная работа посвящена разработке языка описания сценариев тестирования автомобильных систем. Проводится сравнительный анализ схожих по тематике инструментов.\\
-Так же описываются принципы разработки языков и технических инструментов, выбранных для разработки.\\
-Результат работы -- язык описания сценариев тестирования автомобильных систем, являющийся потенциально пригодным для внедрения на производстве.\\
+\Abstract{Выпускная квалификационная работа посвящена разработке языка описания сценариев тестирования автомобильных систем. Проводится сравнительный анализ схожих по тематике инструментов.
+
+Так же описываются принципы разработки языков и технических инструментов, выбранных для разработки.
+
+Результат работы -- язык описания сценариев тестирования автомобильных систем, являющийся потенциально пригодным для внедрения на производстве.
 %для бакалаврских, дипломных и магистерских работ
 
 Ключевые слова: Предметно-ориентированный язык, функциональное тестирование, автомобильные системы.
 
-}{
+}{Final year graduation diploma dedicated to the development of the language designed for describing various automobile system testing scenarios. The comparable analysis of systems that share similar instruments is conducted.
 
-Final year graduation diploma dedicated to the development of the language designed for describing various automobile system testing scenarios. The comparable analysis of systems that share similar instruments is conducted. \\
-Furthermore, this paper aims to describe the development of the programming languages as well as technical instruments used by them.\\
-The final result of this work is a fully functional language used for describing automobile testing scenarios. Also, this language could potentially be integrated into the corporate environment.\\
+Furthermore, this paper aims to describe the development of the programming languages as well as technical instruments used by them.
+
+The final result of this work is a fully functional language used for describing automobile testing scenarios. Also, this language could potentially be integrated into the corporate environment.
 
 Keywords: domain specific language, functional testing, automobile systems.
 }
@@ -94,7 +96,6 @@ AST& Abstract syntax tree
 В данной работе рассматривается разработка языка для функционального тестирования ПО автомобильных систем таким образом, чтобы тестовая документация была понятна всем участникам бизнес цикла. 
 Практика «разработка через поведение» (behaviour-driven development, BDD) была создана для достижения взаимопонимания между всеми участниками процесса. В сфере автомобильных систем BDD подход сильно облегчать процесс разработки. 
 
-%TODO: обзор глав
 
 Данная работа организована следующим образом. В главе \ref{cReview} представлен 
 обзор проблемы создания языка для описания тестовых сценариев тестирования автомобильных систем и обзор аналогов. Глава \ref{cDesign} содержит 
@@ -124,6 +125,26 @@ AST& Abstract syntax tree
 
 %---------------------------ГЛАВА 1.2.	Обзор литературы
 \section{Обзор литературы}
+
+
+Современный автомобиль обладает огромным количеством компьютеров, которые общаются между собой на разных скоростях и типах коммуникаций, так как призваны выполнять разные задачи. С очень быстрым внедрением электронных встроенных систем в транспортных средствах потребность отследить и управлять различными параметрами транспортного средства стала необходимостью. Таким образом были разработаны диагностические системы, чтобы клиенты (проектировщики, тестировщики и механики) могли обнаружить ошибки в транспортном средстве, с помощью соединения их диагностического оборудования c электронным блоком управления в транспортном средстве.
+% Компьютерная диагностика автомобиля  -- это диагностика различных систем автомобиля, производящаяся его блоком управления. 
+
+Бортовые системы современного автомобиля оборудованы электронным блоком управления с функцией самодиагностики, анализирующим основные системы автомобиля и оповещающим водителя об их неисправности. 
+Для компьютерной диагностики электронный блок управления на физческом уровне подключается к стенду через специализированные диагностические интерфейсы, оснащенному датчиками, посредством которых данные о работе систем передаются для дальнейшего анализа на компьютер. На этом этапе удалятся собранная бортовой системой база данных, а также активируется управляющее устройство для сбора информации. 
+
+Одной из областей в автомобильном тестировании является диагностика транспортных стредств, описанная в серии стандартов UDS ISO 14229.
+Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диагностическим системам общаться с ECU, чтобы диагностировать ошибки и при необходимости повторно программировать ECU. Потребность в стандарте возникла так как производители транстпортных средств собирают автомобильные компоненты у разных поставщиков. До возникновения UDS ISO 14229 поставщики должны были заниматься проблемами совместимости между различными диагностическими протоколами, сейчас же все ECU разрабатываются, придерживаясь данного стандарта. Архитектура UDS протокола разработана, основываясь на сетевой модели OSI (Open System Interconnection) и определяет пятый (сетевой уровень) и седьмой (прикладной уровень) модели. 
+
+Стек протокола UDS предлагает четыре важных категории сервисов:
+ \begin{itemize}
+ \itemЗагрузка данных в ECU для разрешения программных ошибок или добавления вновь разработанных программных модулей;
+ \itemУдаленная активация рутин. Диагностика транспортного средства может потребовать тестирования некорректного компонента в определенном  диапазоне значений.  Более того во время тестирования некоторые некоторые шаги могут выполняться в течении определенного времени. Для такого рода активностей используется Remote Routine Service, описанный в ISO 14229. 
+ \itemВозможность передачи данных позволяет клиентам читать или записывать данные в ECU. Данные могут быть считанны или записаны в ячейки памяти, имеющие 16-битный адресс. Информация может быть статичной, как серийный номер устройства, и динамической, как скорость мотора или статус сенсоров. Допустимые значения данных и их длина могут варьироваться в зависимости от адреса ячейки памяти.
+ \itemДиагностика ошибок. Это один из самых важных сервисов UDS протокола. Когда в ECU возникает ошибка, DTC (Diagnostic trouble code), соответствующий возникшей ошибке  сохраняется в определенной области памяти, называемой FCM (Faut Code Memory). Каждая ошибка имеет одно или несколько условий возникновения, обычно описываемые в требованиях.
+ \end{itemize}
+ 
+ 
 Одно и то же оборудование, разрабатываемое для разных автомобильных компаний с различной внутренней архитертурой программного обеспечения при тестироввании ПО может рассматриваться в качестве «черного ящика». Данное понятие предложил У.Р. Эшби в своей книге `` Введение в кибернетику''. Под черным ящиком подразумевается объект исследования, внутреннее устройство которого неизвестно. В электро-вычислительных системах оно помогает изучать поведение систем, абстрагируясь от их внутреннего устройства. Такое тестирование называется поведенческим. В этом случае проверяется функциональное поведение объекта с точки зрения внешнего мира. Под этой стратегией понимается создание тестов для тестового набора, основанных на технических требованиях и их спецификациях. Фактически, при поведенческом тестировании известно какой результат должен быть при определенном наборе данных, которые подаются на вход. Проанализировав требования и спецификации тестировщик может легко определить набор тестовых сценариев для проверки различной функциональности тестируемой системы. Принимая тестируемую систему в качестве черного ящика ее можно исследовать, манипулируя входными данными и данными, полученными на выходе.  
 
  
@@ -154,13 +175,10 @@ AST& Abstract syntax tree
 С точки зрения автомобильной индустрии, в которых функциональное тестирование ПО подразумевает достаточно нетривиальную задачу данный подход сильно облегчает взаимодействие между всеми бизнес участниками. Однако не существует инструмента облегчающего разработку документации, а как следствия взаимопонимания между менеджерами и инженерами и, в то же время, учитывающего особенности данной сферы. 
 
 Возможность использовать единую всеми участниками модель предметной области позволяет значительно ускорить процесс проектирования ПО. Предметно-ориентированое программирование (Domain-driven design, DDD) основано на трех главных определениях:
-
 \begin{itemize}
-\item	Область (англ. domain, домен) — предметная область, к которой применяется разрабатываемое программное обеспечение.
-
-\item	Модель (англ. model) — описывает отдельные аспекты области и может быть использована для решения проблемы.
-
-\item	Язык описания — используется для единого стиля описания домена и модели.
+\itemОбласть (англ. domain, домен) — предметная область, к которой применяется разрабатываемое программное обеспечение.
+\itemМодель (англ. model) — описывает отдельные аспекты области и может быть использована для решения проблемы.
+\itemЯзык описания — используется для единого стиля описания домена и модели.
 \end{itemize}
 
 Использование концепции моделирования системы с использованием единого языка, основанного на бизнес области таким образом, что словарь используется в разработке ПО может решить проблему взаимодействия участников бизнес процесса.
@@ -173,12 +191,11 @@ AST& Abstract syntax tree
 
 
 Хорошо разработанный DSL язык должен быть основан на следующих принципах (Debasish, G. 2011 DSLs in Action, Manning Publications):
-
-•	Язык зеркально отображает артефакты предметной области.
-
-•	Язык должен использовать общий словарь предметной области. Словарь становится катализатором для лучшей связи между разработчиками и бизнес-пользователями.
-
-•	Имплементация языка должна быть абстракцией. В язык не должно быть точных фрагментов имплементации языка. 
+\begin{itemize}
+\itemЯзык зеркально отображает артефакты предметной области.
+\itemЯзык должен использовать общий словарь предметной области. Словарь становится катализатором для лучшей связи между разработчиками и бизнес-пользователями.
+\itemИмплементация языка должна быть абстракцией. В язык не должно быть точных фрагментов имплементации языка. 
+\end{itemize}
 
 Использование проблемно-ориентированный языка позволит решить проблему разработки тестовой документации понятной всем участникам бизнес процесса с учетом специфики автомобильной промышленности.
 
@@ -266,19 +283,6 @@ Cucumber – это фреймворк, реализующий подход BDD. В Cucumber для разработки тест
 
 Прежде чем начать разрабатывать язык для описания сценариев тестирования автомобильных систем рассмотрим основные стандарты, используемые в транспортной промышленности. 
 
-Современный автомобиль обладает огромным количеством компьютеров, которые общаются между собой на разных скоростях и типах коммуникаций, так как призваны выполнять разные задачи. С очень быстрым внедрением электронных встроенных систем в транспортных средствах потребность отследить и управлять различными параметрами транспортного средства стала необходимостью. Таким образом были разработаны диагностические системы, чтобы клиенты (проектировщики, тестировщики и механики) могли обнаружить ошибки в транспортном средстве, с помощью соединения их диагностического оборудования c электронным блоком управления в транспортном средстве. Компьютерная диагностика автомобиля  -- это диагностика различных систем автомобиля, производящаяся его блоком управления. Бортовые системы современного автомобиля оборудованы электронным блоком управления с функцией самодиагностики, анализирующим основные системы автомобиля и оповещающим водителя об их неисправности. 
-Для компьютерной диагностики электронный блок управления на физческом уровне подключается к стенду через специализированные диагностические интерфейсы, оснащенному датчиками, посредством которых данные о работе систем передаются для дальнейшего анализа на компьютер. На этом этапе удалятся собранная бортовой системой база данных, а также активируется управляющее устройство для сбора информации. 
-
-Одной из областей в автомобильном тестировании является диагностика транспортных стредств, описанная в серии стандартов UDS ISO 14229.
-Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диагностическим системам общаться с ECU, чтобы диагностировать ошибки и при необходимости повторно программировать ECU. Потребность в стандарте возникла так как производители транстпортных средств собирают автомобильные компоненты у разных поставщиков. До возникновения UDS ISO 14229 поставщики должны были заниматься проблемами совместимости между различными диагностическими протоколами, сейчас же все ECU разрабатываются, придерживаясь данного стандарта. 
- Архитектура UDS протокола разработана, основываясь на сетевой модели OSI (Open System Interconnection) и определяет пятый (сетевой уровень) и седьмой (прикладной уровень) модели. 
-Стек протокола UDS предлагает четыре важных категории сервисов:
- \begin{itemize}
- \itemЗагрузка данных в ECU для разрешения программных ошибок или добавления вновь разработанных программных модулей;
- \itemУдаленная активация рутин. Диагностика транспортного средства может потребовать тестирования некорректного компонента в определенном  диапазоне значений.  Более того во время тестирования некоторые некоторые шаги могут выполняться в течении определенного времени. Для такого рода активностей используется Remote Routine Service, описанный в ISO 14229. 
- \itemВозможность передачи данных позволяет клиентам читать или записывать данные в ECU. Данные могут быть считанны или записаны в ячейки памяти, имеющие 16-битный адресс. Информация может быть статичной, как серийный номер устройства, и динамической, как скорость мотора или статус сенсоров. Допустимые значения данных и их длина могут варьироваться в зависимости от адреса ячейки памяти.
- \itemДиагностика ошибок. Это один из самых важных сервисов UDS протокола. Когда в ECU возникает ошибка, DTC (Diagnostic trouble code), соответствующий возникшей ошибке  сохраняется в определенной области памяти, называемой FCM (Faut Code Memory). Каждая ошибка имеет одно или несколько условий возникновения, обычно описываемые в требованиях.
- \end{itemize}
  
 Тестирование автомобильных систем предполагает, что поведение электрических блоков управления транспортного средства должно соответствовать стандарту UDS ISO 14229.
  
@@ -287,17 +291,21 @@ Unified Diagnostic Service (UDS) - автомобильный протокол, который позволяет диа
 Поведенческое тестирование автомобильных систем может быть выполнено следующими способами:
 \begin{itemize}
 \itemРазделение на классы эквивалентности 
-\\Часто легко заметить, что входные данные имеют схожие характеристики. В этом случае  их можно сгруппировать и подавать на вход только одну единицу данных из каждой группы.  Идея заключается в разделении входных данных на классы эквивалентности таким образом, что каждый член класса обладает схожими характеристиками.  
-\\Данный способ включается в себя два шага: определение класса эквивалентности и генерацию тестовых сценариев. Под определением класса эквивалентности подразумевается разделение входных данных на два класса: корректные и некорректные данные. Например, если действительный диапазон данных от 0 до 100, то в качестве корректных данных могжет быть выбирано значение 49, а в качестве некорректного 106. 
+
+Часто легко заметить, что входные данные имеют схожие характеристики. В этом случае  их можно сгруппировать и подавать на вход только одну единицу данных из каждой группы.  Идея заключается в разделении входных данных на классы эквивалентности таким образом, что каждый член класса обладает схожими характеристиками.  
+
+Данный способ включается в себя два шага: определение класса эквивалентности и генерацию тестовых сценариев. Под определением класса эквивалентности подразумевается разделение входных данных на два класса: корректные и некорректные данные. Например, если действительный диапазон данных от 0 до 100, то в качестве корректных данных могжет быть выбирано значение 49, а в качестве некорректного 106. 
 
 \itemАнализ граничных значений
-\\Тестирование граничные значения данных позволяют достаточно хорошо проверить качество программного обеспечения. Следовательно, если тестовые сценарии разработаны для граничных значений входной области, то эффективность тестирования повышается. Например, если действительный диапазон данных от 0 до 100, то в качестве корректных данных выбираются граничные значения 0 и 100 для кореектных данных, а в качестве некорректных -1 и 101.
+
+Тестирование граничные значения данных позволяют достаточно хорошо проверить качество программного обеспечения. Следовательно, если тестовые сценарии разработаны для граничных значений входной области, то эффективность тестирования повышается. Например, если действительный диапазон данных от 0 до 100, то в качестве корректных данных выбираются граничные значения 0 и 100 для кореектных данных, а в качестве некорректных -1 и 101.
 
 \itemТестирование, основанное на требованиях
-\\Данный способ тестирования подразумевает валидацию требований, предоставленных аналитиками и инженерами, которые составляют требования. Например, если в требовании описано, что сеть должна переходить в активный режим при получении любого кадра, то в качестве входных данных формируется любой корректный в данной сети кадр.
+
+Данный способ тестирования подразумевает валидацию требований, предоставленных аналитиками и инженерами, которые составляют требования. Например, если в требовании описано, что сеть должна переходить в активный режим при получении любого кадра, то в качестве входных данных формируется любой корректный в данной сети кадр.
 \end{itemize}
 
-
+Основываясь на вышесказанном разрабатываемый язык должен предоставлять пользователям возможность получения передачи данных на сетевом уровне модели ISO по протоколам CAN, FlexRay, LIN и Ethernet.
 
 %-------------------------------СИНТАКСИС ЯЗЫКА
 \section{Описание синтаксиса языка }
